0.2.1 -> 0.2.2

- Fixed autocompletion popup background transparency
- Fixed bug that prevented the window from being maximized on certain configurations
- Fixed autocompletion compatibility with find & replace

0.2.0 -> 0.2.1

- Added "Add breakpoint" context option
- Added Find & Replace menu in code editor
- Added shortcut for simulation control
- Added autocompletion system
- Added unintentation (Shift+Tab)
- Added version auto-checking
- Improved splash screen
- Improved code highlighting (real time parsing)
- Improved notifications layout
- Improved instruction modifiers handling
- Added BLXNS instruction
- Added BXNS instruction
- Added PUSH instruction
- Added POP instruction
- Added switch in settings to ignore unimplemented/deprecated instructions
- Fixed BLX instruction not being able to use labels
- Fixed STM/LDM instruction not detecting the lack of update mode
- Fixed LDM update mode effects
- Fixed labels/symbols validation
- Fixed editor behaviour when simulation with no opened files
- Fixed shift argument syntax (only usable with registers)
- Fixed instruction (with working register) behaviour


0.1.10 -> 0.2.0

- Added Rating and Hardware requirements (AppStream)
- Added CBZ instruction
- Added CBNZ instruction
- Added CLZ instruction
- Improved instructions system (complete overhaul)
- Improved icons and showcase medias
- Improved i18n (French)
- Improved logging formatting
- Fixed layout on desktop
- Fixed Regex Parser invalid statement detection


0.1.9 -> 0.1.10

- Added ADR instruction
- Added BFC instruction
- Added BFI instruction
- Added BKPT instruction
- Added BLX instruction
- Added shortcuts and shortcut hints
- Added code and manual breakpoint settings
- Added i18n (English and French)
- Added notification tray length settings
- Improved Linux execution script (discovering and selecting JRE version)
- Improved Syntax error message (specify file in most of the cases)